regression_tests/snap/in/testvecc2.err
================================================================================

                          PROGRAM SNAP  Version 2.3.53

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Aug 12 2011 20:01:32

================================================================================
                          Run at 14-AUG-2011 07:50:51



================================================================================
                                                            14-AUG-2011 07:50:51

                                 ERROR SUMMARY

================================================================================

Error: Invalid instrument station code "1"
       Line: 7  File: test1.dat

Error: Invalid target station code "2"
       Line: 8  File: test1.dat

Error: Invalid target station code "3"
       Line: 9  File: test1.dat

Error: Invalid target station code "2"
       Line: 11  File: test1.dat

Error: Invalid target station code "1"
       Line: 12  File: test1.dat

Error: Invalid target station code "3"
       Line: 13  File: test1.dat

Error: Invalid target station code "2"
       Line: 15  File: test1.dat

Error: Invalid target station code "1"
       Line: 16  File: test1.dat

Error: Invalid target station code "3"
       Line: 17  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 21  File: test1.dat

Error: Invalid target station code "2"
       Line: 21  File: test1.dat

Error: Invalid target station code "1"
       Line: 22  File: test1.dat

Error: Invalid target station code "3"
       Line: 22  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 27  File: test1.dat

Error: Invalid target station code "2"
       Line: 27  File: test1.dat

Error: Invalid target station code "1"
       Line: 28  File: test1.dat

Error: Invalid target station code "3"
       Line: 28  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 32  File: test1.dat

Error: Invalid target station code "2"
       Line: 32  File: test1.dat

Error: Invalid target station code "1"
       Line: 33  File: test1.dat

Error: Invalid target station code "3"
       Line: 33  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 37  File: test1.dat

Error: Invalid target station code "2"
       Line: 37  File: test1.dat

Error: Invalid target station code "1"
       Line: 38  File: test1.dat

Error: Invalid target station code "3"
       Line: 38  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 42  File: test1.dat

Error: Invalid target station code "2"
       Line: 42  File: test1.dat

Error: Invalid target station code "1"
       Line: 43  File: test1.dat

Error: Invalid target station code "3"
       Line: 43  File: test1.dat

Error: Invalid target station code "4"
       Line: 44  File: test1.dat

Error: Invalid target station code "5"
       Line: 44  File: test1.dat

Error: Invalid target station code "1"
       Line: 45  File: test1.dat

Error: Invalid target station code "5"
       Line: 45  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 49  File: test1.dat

Error: Invalid target station code "2"
       Line: 49  File: test1.dat

Error: Invalid target station code "1"
       Line: 50  File: test1.dat

Error: Invalid target station code "3"
       Line: 50  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 54  File: test1.dat

Error: Invalid target station code "2"
       Line: 55  File: test1.dat

Error: Invalid target station code "3"
       Line: 56  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 61  File: test1.dat

Error: Invalid target station code "2"
       Line: 61  File: test1.dat

Error: Invalid target station code "1"
       Line: 62  File: test1.dat

Error: Invalid target station code "3"
       Line: 62  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 66  File: test1.dat

Error: Invalid target station code "2"
       Line: 66  File: test1.dat

Error: Invalid target station code "1"
       Line: 67  File: test1.dat

Error: Invalid target station code "3"
       Line: 67  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 71  File: test1.dat

Error: Invalid target station code "2"
       Line: 72  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 76  File: test1.dat

Error: Invalid target station code "2"
       Line: 77  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 103  File: test1.dat

Error: Invalid target station code "2"
       Line: 104  File: test1.dat

Error: Invalid target station code "3"
       Line: 105  File: test1.dat

Error: Invalid target station code "2"
       Line: 107  File: test1.dat

Error: Invalid target station code "1"
       Line: 108  File: test1.dat

Error: Invalid target station code "3"
       Line: 109  File: test1.dat

Error: Invalid target station code "2"
       Line: 111  File: test1.dat

Error: Invalid target station code "1"
       Line: 112  File: test1.dat

Error: Invalid target station code "3"
       Line: 113  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 117  File: test1.dat

Error: Invalid target station code "2"
       Line: 117  File: test1.dat

Error: Invalid target station code "1"
       Line: 118  File: test1.dat

Error: Invalid target station code "3"
       Line: 118  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 123  File: test1.dat

Error: Invalid target station code "2"
       Line: 123  File: test1.dat

Error: Invalid target station code "1"
       Line: 124  File: test1.dat

Error: Invalid target station code "3"
       Line: 124  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 130  File: test1.dat

Error: Invalid target station code "2"
       Line: 130  File: test1.dat

Error: Invalid target station code "1"
       Line: 131  File: test1.dat

Error: Invalid target station code "3"
       Line: 131  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 135  File: test1.dat

Error: Invalid target station code "2"
       Line: 135  File: test1.dat

Error: Invalid target station code "1"
       Line: 136  File: test1.dat

Error: Invalid target station code "3"
       Line: 136  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 140  File: test1.dat

Error: Invalid target station code "2"
       Line: 140  File: test1.dat

Error: Invalid target station code "1"
       Line: 141  File: test1.dat

Error: Invalid target station code "3"
       Line: 141  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 145  File: test1.dat

Error: Invalid target station code "2"
       Line: 146  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 150  File: test1.dat

Error: Invalid target station code "2"
       Line: 151  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 159  File: test1.dat

Error: Invalid target station code "2"
       Line: 160  File: test1.dat

Error: Invalid target station code "3"
       Line: 161  File: test1.dat

Error: Invalid target station code "2"
       Line: 163  File: test1.dat

Error: Invalid target station code "1"
       Line: 164  File: test1.dat

Error: Invalid target station code "3"
       Line: 165  File: test1.dat

Error: Invalid target station code "2"
       Line: 167  File: test1.dat

Error: Invalid target station code "1"
       Line: 168  File: test1.dat

Error: Invalid target station code "3"
       Line: 169  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 173  File: test1.dat

Error: Invalid target station code "2"
       Line: 173  File: test1.dat

Error: Invalid target station code "1"
       Line: 174  File: test1.dat

Error: Invalid target station code "3"
       Line: 174  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 179  File: test1.dat

Error: Invalid target station code "2"
       Line: 179  File: test1.dat

Error: Invalid target station code "1"
       Line: 180  File: test1.dat

Error: Invalid target station code "3"
       Line: 180  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 184  File: test1.dat

Error: Invalid target station code "2"
       Line: 185  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 189  File: test1.dat

Error: Invalid target station code "2"
       Line: 190  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 194  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 200  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 205  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 211  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 218  File: test1.dat

Error: Invalid target station code "2"
       Line: 218  File: test1.dat

Error: Invalid target station code "1"
       Line: 223  File: test1.dat

Error: Invalid target station code "3"
       Line: 223  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 230  File: test1.dat

Error: Invalid target station code "2"
       Line: 231  File: test1.dat

Error: Invalid target station code "3"
       Line: 232  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 250  File: test1.dat

Error: Invalid target station code "2"
       Line: 250  File: test1.dat

Error: Invalid target station code "1"
       Line: 254  File: test1.dat

Error: Invalid target station code "3"
       Line: 254  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 260  File: test1.dat

Error: Invalid target station code "2"
       Line: 261  File: test1.dat

Error: Invalid target station code "3"
       Line: 262  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 277  File: test1.dat

Error: Invalid target station code "2"
       Line: 277  File: test1.dat

Error: Invalid target station code "1"
       Line: 280  File: test1.dat

Error: Invalid target station code "3"
       Line: 280  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 284  File: test1.dat

Error: Invalid target station code "2"
       Line: 285  File: test1.dat

Error: Invalid target station code "3"
       Line: 286  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 295  File: test1.dat

Error: Invalid target station code "2"
       Line: 295  File: test1.dat

Error: Invalid target station code "1"
       Line: 298  File: test1.dat

Error: Invalid target station code "3"
       Line: 298  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 302  File: test1.dat

Error: Invalid target station code "2"
       Line: 303  File: test1.dat

Error: Invalid target station code "3"
       Line: 304  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 310  File: test1.dat

Error: Invalid target station code "2"
       Line: 310  File: test1.dat

Error: Invalid target station code "1"
       Line: 312  File: test1.dat

Error: Invalid target station code "2"
       Line: 312  File: test1.dat

Error: Invalid target station code "1"
       Line: 314  File: test1.dat

Error: Invalid target station code "3"
       Line: 314  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 317  File: test1.dat

Error: Invalid target station code "2"
       Line: 318  File: test1.dat

Error: Invalid target station code "3"
       Line: 319  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 327  File: test1.dat

Error: Invalid target station code "2"
       Line: 332  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 339  File: test1.dat

Error: Invalid target station code "2"
       Line: 340  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 355  File: test1.dat

Error: Invalid target station code "2"
       Line: 359  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 365  File: test1.dat

Error: Invalid target station code "2"
       Line: 366  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 379  File: test1.dat

Error: Invalid target station code "2"
       Line: 382  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 386  File: test1.dat

Error: Invalid target station code "2"
       Line: 388  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 395  File: test1.dat

Error: Invalid target station code "2"
       Line: 398  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 402  File: test1.dat

Error: Invalid target station code "2"
       Line: 404  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 412  File: test1.dat

Error: Invalid target station code "1"
       Line: 414  File: test1.dat

Error: Invalid target station code "2"
       Line: 416  File: test1.dat

Error: Invalid instrument station code "1"
       Line: 419  File: test1.dat

Error: Invalid target station code "2"
       Line: 420  File: test1.dat

Error: 168 errors reported reading the data files
