regression_tests/snap/in/testvecc2.snp
Title Testing CSV input

mode 3d data_check

! Coordinate file 

coordinate_file testmdfc.csv csv format=mdfc1

! Data files

data_file testvecc.csv  error_factor 2 csv format=vecc1 
data_file testdist.csv  csv format=dist 
data_file test1.dat



